testsuite/tests/patsyn/should_fail/T15694.stderr

T15694.hs:22:35: error:
    • Expected kind ‘k1 -> k0’, but ‘f a1’ has kind ‘ks’
      ‘ks’ is a rigid type variable bound by
        an explicit forall ks k (f :: k -> ks) (a1 :: k) (ctx :: Ctx ks)
                           (ks1 :: Type) k1 (a2 :: k1) (ctx1 :: Ctx ks1) a3
        at T15694.hs:18:30-31
    • In the first argument of ‘(~~)’, namely ‘f a1 a2’
